<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityPregunta">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#026105"
            app:srcCompat="@drawable/bombilla"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="366dp"
            android:layout_height="match_parent"
            android:background="#026105"
            android:gravity="center|left"
            android:text=" MIS PREGUNTAS"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ListView
        android:id="@+id/listapral"
        android:layout_width="match_parent"
        android:layout_height="606dp"
        android:layout_weight="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <TextView
        android:id="@+id/textpral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seleccione_una_pregunta_para_borrarla"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBorrar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#044D87"
            android:text="@string/borrar_pregunta"
            android:textColor="#F3EEEE" />

        <Button
            android:id="@+id/buttonAñadir"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9F0E03"
            android:text="@string/a_adir_pregunta"
            android:textColor="#EFEAEA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:text="volver al menu" />
    </LinearLayout>

</LinearLayout>