<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivityPregunta">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="411dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestaEdit"
        app:uiZoomControls="true"
        tools:context=".MapsActivityPregunta" />

    <EditText
        android:id="@+id/preguntaEdit"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:hint="@string/escribe_tu_pregunta_aqui"
        android:importantForAutofill="no"
        android:textColor="#F6F1F1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/respuestaEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/marca_la_ubicacion_en_el_mapa"
        android:textColor="#FDFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preguntaEdit" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C27B0"
            android:onClick="salir"
            android:text="volver"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="258dp"
            android:layout_height="63dp"
            android:background="#417504"
            android:onClick="onClick"
            android:text="@string/guardar"
            android:textColor="#F5F9FB"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

